#7826 - Mega menu - Fixed dropdown alignment bug + css cleanup

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
@@ -1,20 +1,8 @@
 .megamenu-wrapper {
 
-	.has-submenu {
-
-		.dropdown-menu {
-			left: auto;
-		}
-	}
-
 	.dropdown {
 
-		.dropdown-menu {
-			margin-top: 0;
-			top: auto;
-		}
-
-		.dropdown-toggle {
+		.dropdown-toggle:hover {
 			position: relative;
 
 			&::before {
@@ -33,49 +21,10 @@
 		}
 	}
 
-	.dropdown-menu {
-		background-color: var(--swift-background-color, inherit);
-		color: var(--swift-foreground-color, inherit);
-
-		&:hover,
-		&:focus {
-			background-color: var(--swift-background-color, inherit);
-			color: var(--swift-foreground-color, inherit);
-		}
-	}
-
 	.nav-link-clean {
 
 		&::after {
 			display: none;
-		}
-	}
-
-	.nav-link-underline {
-
-		&:hover,
-		&:focus {
-			text-decoration: underline;
-		}
-	}
-
-	.nav-link {
-		color: var(--swift-foreground-color, inherit);
-
-		&:hover,
-		&:focus {
-			color: var(--swift-foreground-color, inherit);
-		}
-	}
-
-	.dropdown-item {
-		background-color: var(--swift-background-color, inherit);
-		color: var(--swift-foreground-color, inherit);
-
-		&:hover,
-		&:focus {
-			background-color: var(--swift-background-color, inherit);
-			color: var(--swift-foreground-color, inherit);
 		}
 	}
 }
